    following packages:
    + apache2 - configuration files and init scripts
    + apache2-bin - binaries and modules
    + apache2-common - error pages and images
  * Drop the ITK MPM entirely for now
  * Drop debian/source/options again: We do not need to ignore .svn directories
    anymore since the new package management system is based on git and includes
    the full source

 -- Arno Töll <debian@toell.net>  Thu, 12 Jan 2012 03:16:24 +0100

apache2 (2.2.21-6) UNRELEASED; urgency=low

  [ Arno Töll ]
  * Fix "typo in /etc/apache2/apache2.conf" (Closes: #653801)

  [ Stefan Fritsch ]
  * Adjust debian/control to point to new git repository.

 -- Arno Töll <debian@toell.net>  Sat, 31 Dec 2011 09:45:14 +0100

apache2 (2.2.21-5) unstable; urgency=low

  [ Arno Töll ]
  * Fix build failures introduced as regregression by the previous build. Debian
    buildds aren't rebuilding arch:all packages which caused problems for our
    unconditional copying into binary package. I was warned.

 -- Stefan Fritsch <sf@debian.org>  Thu, 29 Dec 2011 17:36:41 +0100

apache2 (2.2.21-4) unstable; urgency=low

  [ Stefan Fritsch ]

  * Security: Fix broken patch for CVE-2011-3607 (Integer overflow in
    ap_pregsub).
  * Optimize debian/rules again to improve build time by doing most work in a
    single parallelized "build-%" target.

  [ Arno Töll ]

  * Fix "Suggest removing DefaultType from apache2.conf" change the DefaultType
    from text/plain to None. This lets the browser guess a proper MIME type
    instead of being forced to treat a given file according to our default type
    (Closes: #440058)
  * Fix "add pre-rotate hook to logrotate script" execute scripts in
    /etc/logrotate.d/httpd-prerotate if available (Closes: #590096).
  * Fix "Hide /icons index" Disables indexes on the icon directory. By upgrading
    to Debian's 3.0/quilt source format also images don't need to be generated
    at build time anymore. Hence, the icon date can no longer lead to