@@ -1,3 +1,4 @@
 /usr/share/apache2/icons/
 /usr/share/apache2/error
-debian/icons/*.png      usr/share/apache2/icons
+debian/icons/*.png		/usr/share/apache2/icons
+/usr/sbin/envvars-std           /usr/share/apache2/build
