@@ -1,0 +1,25 @@
+#!/bin/sh
+# prerm script for apache2-suexec-custom
+
+set -e
+
+case "$1" in
+    remove|upgrade|deconfigure)
+        update-alternatives --remove /usr/lib/apache2/suexec-custom suexec
+    ;;
+
+    failed-upgrade)
+    ;;
+
+    *)
+        echo "prerm called with unknown argument \`$1'" >&2
+        exit 1
+    ;;
+esac
+
+# dh_installdeb will replace this with shell code automatically
+# generated by other debhelper scripts.
+
+#DEBHELPER#
+
+exit 0
