@@ -1,0 +1,25 @@
+#! /bin/sh
+# postinst script for apache2-suexec-pristine
+
+set -e
+
+case "$1" in
+
+configure)
+	update-alternatives --install /usr/lib/apache2/suexec suexec /usr/lib/apache2/suexec-pristine 10
+	;;
+abort-upgrade|abort-remove|abort-deconfigure)
+	;;
+
+*)
+	echo "postinst called with unknown argument \`$1'" >&2
+	exit 0
+	;;
+esac
+
+# dh_installdeb will replace this with shell code automatically
+# generated by other debhelper scripts.
+
+#DEBHELPER#
+
+exit 0
