@@ -1,1 +1,1 @@
-/usr/sbin/suexec	/usr/lib/apache2/
+/usr/sbin/suexec-pristine	/usr/lib/apache2/
