@@ -7,12 +7,24 @@
 @DPATCH@
 --- a/Makefile.in
 +++ b/Makefile.in
-@@ -225,7 +225,7 @@
+@@ -229,14 +229,16 @@
+ 	fi
+ 
+ install-suexec:
+-	@if test -f $(builddir)/support/suexec; then \
++	@if test -f $(builddir)/support/suexec-pristine && test -f $(builddir)/support/suexec-custom; then \
+             test -d $(DESTDIR)$(sbindir) || $(MKINSTALLDIRS) $(DESTDIR)$(sbindir); \
+-            $(INSTALL_PROGRAM) $(top_builddir)/support/suexec $(DESTDIR)$(sbindir); \
+-            chmod 4755 $(DESTDIR)$(sbindir)/suexec; \
++            $(INSTALL_PROGRAM) $(top_builddir)/support/suexec-pristine $(DESTDIR)$(sbindir); \
++            chmod 4755 $(DESTDIR)$(sbindir)/suexec-pristine; \
++            $(INSTALL_PROGRAM) $(top_builddir)/support/suexec-custom $(DESTDIR)$(sbindir); \
++            chmod 4755 $(DESTDIR)$(sbindir)/suexec-custom; \
  	fi
  
  suexec:
 -	cd support && $(MAKE) suexec
-+	cd support && $(MAKE) suexec suexec-custom
++	cd support && $(MAKE) suexec-pristine suexec-custom
  
  x-local-distclean:
  	@rm -rf autom4te.cache
@@ -23,18 +35,24 @@
  	logresolve.pl phf_abuse_log.cgi split-logfile envvars-std
  
 -CLEAN_TARGETS = suexec
-+CLEAN_TARGETS = suexec suexec-custom
++CLEAN_TARGETS = suexec-pristine suexec-custom
  
  PROGRAMS = htpasswd htdigest rotatelogs logresolve ab htdbm htcacheclean httxt2dbm $(NONPORTABLE_SUPPORT)
  TARGETS  = $(PROGRAMS)
-@@ -62,6 +62,10 @@
- suexec: $(suexec_OBJECTS)
- 	$(LINK) $(suexec_OBJECTS)
+@@ -58,9 +58,13 @@
+ checkgid: $(checkgid_OBJECTS)
+ 	$(LINK) $(checkgid_LTFLAGS) $(checkgid_OBJECTS) $(PROGRAM_LDADD)
  
+-suexec_OBJECTS = suexec.lo
+-suexec: $(suexec_OBJECTS)
+-	$(LINK) $(suexec_OBJECTS)
++suexec-pristine_OBJECTS = suexec.lo
++suexec-pristine: $(suexec-pristine_OBJECTS)
++	$(LINK) $(suexec-pristine_OBJECTS)
++
 +suexec-custom_OBJECTS = suexec-custom.lo
 +suexec-custom: $(suexec-custom_OBJECTS)
 +	$(LINK) $(suexec-custom_OBJECTS)
-+
+ 
  htcacheclean_OBJECTS = htcacheclean.lo
  htcacheclean: $(htcacheclean_OBJECTS)
- 	$(LINK) $(htcacheclean_LTFLAGS) $(htcacheclean_OBJECTS) $(PROGRAM_LDADD)
