@@ -25,7 +25,7 @@
 #084_CVE-2011-4317
 #085_CVE-2011-3607
 #099_config_guess_sub_update
-#201_build_suexec-custom
+201_build_suexec-custom
 # The patch below must not be applied by quilt at extraction time.  It depends
 # on some script-fu to be executed before. Have a look
 # to debian/rules' prepare-custom-suexec target.
